Implemented User authentication
